Fixing non-wrapping text

--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,7 @@ main {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
 }
 
 /* .right-section {
@@ -99,7 +100,7 @@ main {
 #map {
     /* display: inline-block; */
     height: 600px; 
-    width: 1000px; 
+    width: 50%;
     margin-left: 10px; 
    }
 
@@ -123,6 +124,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 50%;
 }
 
 #address-paragraph {
